crates/parse/src/grammar/snapshots/mcfunction_parse__grammar__nbt__tests__float_dash.snap
---
source: crates/parse/src/grammar/nbt.rs
expression: "parse_nbt(\"-0.61803398875\")"
---
Group(NbtNumber) at 0:0 - 0:14 {
    Joined(Float) `-0.61803398875` at 0:0 - 0:14
}

