crates/parse/src/grammar/snapshots/mcfunction_parse__grammar__nbt__tests__float_only_dot.snap
---
source: crates/parse/src/grammar/nbt.rs
expression: "parse_nbt(\".\")"
---
Joined(UnquotedString) `.` at 0:0 - 0:1

