crates/parse/src/grammar/snapshots/mcfunction_parse__grammar__nbt__tests__float_plus.snap
---
source: crates/parse/src/grammar/nbt.rs
expression: "parse_nbt(\"+2.718281828\")"
---
Group(NbtNumber) at 0:0 - 0:12 {
    Joined(Float) `+2.718281828` at 0:0 - 0:12
}

