crates/parse/src/grammar/snapshots/mcfunction_parse__grammar__nbt__tests__float_sci.snap
---
source: crates/parse/src/grammar/nbt.rs
expression: "parse_nbt(\"2.2e10\")"
---
Group(NbtNumber) at 0:0 - 0:6 {
    Joined(Float) `2.2e10` at 0:0 - 0:6
}

