crates/parse/src/grammar/snapshots/mcfunction_parse__grammar__nbt__tests__invalid_suffix_int.snap
---
source: crates/parse/src/grammar/nbt.rs
expression: "parse_nbt(\"1a\")"
---
Joined(UnquotedString) `1a` at 0:0 - 0:2

