crates/parse/src/grammar/snapshots/mcfunction_parse__grammar__nbt__tests__list_nested.snap
---
source: crates/parse/src/grammar/nbt.rs
expression: "parse_nbt(\"[[123],[[],456,[789]]]\")"
---
Group(NbtSequence) at 0:0 - 0:22 {
    Token(LBracket) `[` at 0:0 - 0:1
    Group(NbtSequence) at 0:1 - 0:6 {
        Token(LBracket) `[` at 0:1 - 0:2
        Group(NbtNumber) at 0:2 - 0:5 {
            Joined(Float) `123` at 0:2 - 0:5
        }
        Token(RBracket) `]` at 0:5 - 0:6
    }
    Token(Comma) `,` at 0:6 - 0:7
    Group(NbtSequence) at 0:7 - 0:21 {
        Token(LBracket) `[` at 0:7 - 0:8
        Group(NbtSequence) at 0:8 - 0:10 {
            Token(LBracket) `[` at 0:8 - 0:9
            Token(RBracket) `]` at 0:9 - 0:10
        }
        Token(Comma) `,` at 0:10 - 0:11
        Group(NbtNumber) at 0:11 - 0:14 {
            Joined(Float) `456` at 0:11 - 0:14
        }
        Token(Comma) `,` at 0:14 - 0:15
        Group(NbtSequence) at 0:15 - 0:20 {
            Token(LBracket) `[` at 0:15 - 0:16
            Group(NbtNumber) at 0:16 - 0:19 {
                Joined(Float) `789` at 0:16 - 0:19
            }
            Token(RBracket) `]` at 0:19 - 0:20
        }
        Token(RBracket) `]` at 0:20 - 0:21
    }
    Token(RBracket) `]` at 0:21 - 0:22
}

